Fixed spacing in header. Updated avatar.

--- a/css/main.css
+++ b/css/main.css
@@ -93,9 +93,9 @@ html, body {
     padding: 0;
 }
 .nav li {
+	margin-right: 2px;
 	display: inline;
     padding: 3.5px;
-    margin-bottom: 7px;
     background-color: #000000;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
